--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
                     <div class="col-lg-8">
                         <div class="header-hero-content text-center">
                             <h3 class="header-sub-title wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.2s">Nftfy - NFT Securitizer</h3>
-                            <h2 class="header-title wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.5s">Securitize Non Fungibles</h2>
-                            <p class="text wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.8s">Bring collective ownership and instant liquidity to your ERC-721 tokens</p>
+                            <h2 class="header-title wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.5s">Securitization for DeFi</h2>
+                            <p class="text wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.8s">Bring collective ownership and instant liquidity to your NFTs</p>
                             <a href="/dapp/" rel="nofollow" class="main-btn wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="1.1s">Start Now</a>
                         </div> <!-- header hero content -->
                     </div>
@@ -185,7 +185,7 @@
                         </div>
                         <div class="services-content mt-30">
                             <h4 class="services-title"><a href="#">Securitize NFTs</a></h4>
-                            <p class="text">Get Shares baked by a NFT. Stake an ERC-721 in Nftfy contract and get ERC-20 Tokens.</p>
+                            <p class="text">Get Shares fully backed by your NFTs. Stake ERC721 Tokens in Nftfy and receive ERC20 Tokens of your choice.</p>
  <!--   <a class="more" href="#">Learn More <i class="lni-chevron-right"></i></a> -->
                         </div>
                     </div> <!-- single services -->
@@ -212,8 +212,8 @@
                             <i class="lni-bolt-alt"></i>
                         </div>
                         <div class="services-content mt-30">
-                            <h4 class="services-title"><a href="#">Increase Token Value</a></h4>
-                            <p class="text">Create liquidity through Network Effects with many other interested parties.</p>
+                            <h4 class="services-title"><a href="#">Pricing NFT</a></h4>
+                            <p class="text">Divide into Shares and let the Open Market price them.</p>
              <!--               <a class="more" href="#">Learn More <i class="lni-chevron-right"></i></a>    -->
                         </div>
                     </div> <!-- single services -->
@@ -229,7 +229,7 @@
                         </div>
                         <div class="services-content mt-30">
                             <h4 class="services-title"><a href="#">Launch a SDO</a></h4>
-                            <p class="text">Perform a Security Public Offering directly in a Decentralized Exchange (Dex) and with guaranteed liquidity to the investors.</p>
+                            <p class="text">Make Public Offerings directly in Nftfy and ensure liquidity for the investors.</p>
                  <!--           <a class="more" href="#">Learn More <i class="lni-chevron-right"></i></a>  -->
                         </div>
                     </div> <!-- single services -->
@@ -243,7 +243,7 @@
                         </div>
                         <div class="services-content mt-30">
                             <h4 class="services-title"><a href="#">Decentralized Backing Mechanism</a></h4>
-                            <p class="text">Easily create a Security through the Decentralized Backing Mechanism that is immune to coercion and censorship.</p>
+                            <p class="text">The contract guarantees the backing of the securities, as well as all the rights of the participants, without censorship or exclusive access.</p>
    <!--                           <a class="more" href="#">Learn More <i class="lni-chevron-right"></i></a>     -->
                         </div>
                     </div> <!-- single services -->
@@ -263,9 +263,9 @@
                     <div class="about-content mt-50 wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <div class="section-title">
                             <div class="line"></div>
-                            <h3 class="title">Choose your best NFT <span>and stake it on Nftfy, make your rules and get Shares</span></h3>
+                            <h3 class="title">Stake your NFTs in Nftfy, <span>make your rules, and get Shares conforming to the ERC20 standards.</span></h3>
                         </div> <!-- section title -->
-                        <p class="text">You easily stake an ERC721 on Nftfy, create the rules to stake the NFT and get back 100% of the Shares to spread with your friends or unknown parties. The contract manage the stake without special actors, thus, only complying the rules to get the NFT back. </p>
+                        <p class="text">You can easily stake an ERC721 Token in Nftfy, establish the contract rules, and receive 100% of the Shares to do whatever you desire. The contract manages the stake without special agents, only complying with the rules to get the NFT back. </p>
                         <a href="/dapp/" class="main-btn">Securitize now</a>
                     </div> <!-- about content -->
                 </div>
@@ -297,7 +297,7 @@
                             <div class="line"></div>
                             <h3 class="title">Launch Your SDO<span> Security Dex Offering</span></h3>
                         </div> <!-- section title -->
-                        <p class="text">Build a liquidity market to your Shares and release your ERC20 tokens to the Public enabling easily exchange through the Liquidity Bootstrapping Pool (BLP) from Balancer and Uniswap</p>
+                        <p class="text">Build a liquidity market to your Shares and release your Securities to the public. In other words, you can make Public Offerings and enable easy exchange through Liquidity Bootstrapping Pools (BLPs) from Balancer.</p>
                         <a href="/dapp/" class="main-btn">Launch a SDO</a>
                     </div> <!-- about content -->
                 </div>
@@ -321,9 +321,9 @@
                     <div class="about-content mt-50 wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <div class="section-title">
                             <div class="line"></div>
-                            <h3 class="title"><span>Explore all the features of the</span>DeFi Ecosystem with your newly tokens</h3>
+                            <h3 class="title"><span>Explore all the features of the </span>DeFi Ecosystem with your newly created tokens</h3>
                         </div> <!-- section title -->
-                        <p class="text">Once created a high liquidity market, The Securities Tokens can enjoy of all the features of the DeFi Ecosystem like Lending, Borrowing, Derivatives, Flash Loans, etc.</p>
+                        <p class="text">You can enjoy all the features of the DeFi Ecosystem using your ERC20 Tokens, such as Lending, Borrowing, Derivatives, Flash Loans, and plenty of others.</p>
                         <a href="/dapp/" class="main-btn">Know More</a>
                     </div> <!-- about content -->
                 </div>
@@ -394,19 +394,19 @@
                 <div class="col-lg-4 col-md-7 col-sm-8">
                     <div class="single-team text-center mt-30 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.8s">
                         <div class="team-image">
-                            <img src="assets/images/team-3.png" alt="Team">
+                            <img src="assets/images/favicon.png" alt="Team">
                             <div class="social">
                                 <ul>
                                     <!-- li><a href="#"><i class="lni-facebook-filled"></i></a></li -->
                                     <!-- li><a href="#"><i class="lni-twitter-filled"></i></a></li -->
                                     <!-- li><a href="#"><i class="lni-instagram-filled"></i></a></li -->
-                                    <li><a href="https://www.linkedin.com/in/antoniohoffert"><i class="lni-linkedin-original"></i></a></li>
+                                    <li><a href="https://www.linkedin.com/in/vin%C3%ADcius-antunes-vasconcelos-69a92577/"></i></a></li>
                                 </ul>
                             </div>
                         </div>
                         <div class="team-content">
-                            <h5 class="holder-name">Antonio Hoffert</h5>
-                            <p class="text">Economist</p>
+                            <h5 class="holder-name">Vinícius Vasconcelos</h5>
+                            <p class="text">Electrical Engineer</p>
                         </div>
                     </div>
                 </div>
@@ -435,19 +435,19 @@
                 <div class="col-lg-4 col-md-7 col-sm-8">
                     <div class="single-team text-center mt-30 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.5s">
                         <div class="team-image">
-                            <img src="assets/images/team-5.png" alt="Team">
+                            <img src="assets/images/favicon.png" alt="Team">
                             <div class="social">
                                 <ul>
                                     <!-- li><a href="#"><i class="lni-facebook-filled"></i></a></li -->
                                     <!-- li><a href="#"><i class="lni-twitter-filled"></i></a></li -->
-                                    <li><a href="https://github.com/gleissonassis"><i class="lni-github-original"></i></a></li>
+                                    <!-- li><a href="https://github.com/"><i class="lni-github-original"></i></a></li -->
                                     <!-- li><a href="#"><i class="lni-instagram-filled"></i></a></li -->
-                                    <li><a href="https://www.linkedin.com/in/gleissonassis"><i class="lni-linkedin-original"></i></a></li>
+                                    <li><a href="https://www.linkedin.com/in/henriquedinizmascarenhas/"></i></a></li>
                                 </ul>
                             </div>
                         </div>
                         <div class="team-content">
-                            <h5 class="holder-name">Gleisson Assis</h5>
+                            <h5 class="holder-name">Henrique Mascarenhas</h5>
                             <p class="text">Developer</p>
                         </div>
                     </div>
@@ -466,7 +466,7 @@
                 <div class="row">
                     <div class="col-lg-6">
                         <div class="subscribe-content mt-45">
-                            <h2 class="subscribe-title">Subscribe To Know <span>when we launch</span></h2>
+                            <h2 class="subscribe-title">Subscribe To Know Everything First<span></span></h2>
                         </div>
                     </div>
                     <div class="col-lg-6">
@@ -487,8 +487,8 @@
                                 <img src="assets/images/logo.svg" alt="logo">
                             </a>
                             <p class="text">
-                                Nftfy is open source software and our contribution to the NFT and DeFi ecosystems.
-                                Do you like the project? Join our Telegram group to be part of it.</p>
+                                Nftfy is an open-source platform to provide a contribution to the NFT and DeFi Ecosystems.
+                                Did you like the project? Feel free to join our group in Discord and share your ideas with us!</p>
                             <ul class="social">
                                 <!-- li><a href="#"><i class="lni-facebook-filled"></i></a></li -->
                                 <li><a href="https://twitter.com/nftfysec"><i class="lni-twitter-filled"></i></a></li>
@@ -518,7 +518,7 @@
                                 </div>
                                 <ul class="link">
                                     <li><a href="https://drive.google.com/file/d/1B4b8jV3QDxGPO-Xg_JAtiKbd2O6y8cV7/view">Whitepaper</a></li>
-                                    <li><a href="https://docs.google.com/presentation/d/1k4k7XW3IKsqm2Je3JHS1SqsGLlK3B-Md2nOeTYpo-S8/edit?usp=sharing">Presentation</a></li>
+                                    <li><a href="https://docs.google.com/presentation/d/1qmuZFXqZzLOUEki1Yq8vuIE3QNc9PFR-oV7I9vJ5gbg/edit?usp=sharing">Presentation</a></li>
                                     <li><a href="https://github.com/nftfy/nftfy-core/tree/master/src">Smart Contracts</a></li>
                                     <!-- li><a href="#">Home</a></li -->
                                     <!-- li><a href="#">Page</a></li -->
@@ -533,7 +533,7 @@
                                 </div>
                                 <ul class="link">
                                     <li><a href="mailto:help@nftfy.tk">E-mail</a></li>
-                                    <li><a href="https://t.me/nftfySec">Telegram</a></li>
+                                    <li><a href="https://discord.gg/tE4xxFH">Discord</a></li>
                                 </ul>
                             </div> <!-- footer wrapper -->
                         </div> <!-- footer link -->
